@@ -3,7 +3,9 @@ h2. Version 0.1
     * delivery date : ???
     * developer(s)  : bourdon.ugo@gmail.com
     * features      :
-        ** async API with com.ning%async-http-client implementation
+        ** async API with 'com.ning % async-http-client' implementation
         ** GET request
         ** POST request
-        ** Headers & Cookies Handling
+        ** Cookies handling (bugs with maxAge, secure & version parameters)
+        ** scala docs on public def for AsyncHttpClient class
+        ** timeout handling
